--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Neha Ajith</title>
-    <style>
-        .aligncenter {
-            text-align: center;
-        }
-        .head{
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <h2 class="head">Under construction.</h2>
-    <p class="aligncenter">
-        <img src="patrick.jpg" alt="centered image" /><br>
-    </p>
-</body>
+  </head>
+  <body>
+    <nav>
+      <label class="logo">NEHA AJITH</label>
+      <ul>
+        <li><a href="#">INTRO</a></li>
+        <li><a href="#">WHO</a></li>
+        <li><a href="#">WHAT</a></li>
+        <li><a href="#">PROJECTS</a></li>
+      </ul>
+    </nav>
+    <center>
+      <h2 class="head">Under construction.</h2>
+      <p class="aligncenter">
+        <img src="patrick.jpg" alt="centered image" /><br />
+      </p>
+    </center>
+  </body>
 </html>
