--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="all.css" rel="stylesheet">
     <title>Neha Ajith</title>
   </head>
   <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <img class="menu" src="assets/menu.png">
+        </label>
+        
       <label class="logo">NEHA AJITH</label>
       <ul>
-        <li><a href="#">INTRO</a></li>
+        <li><a class="active" href="#">INTRO</a></li>
         <li><a href="#">WHO</a></li>
         <li><a href="#">WHAT</a></li>
         <li><a href="#">PROJECTS</a></li>
