--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
         <li><a href="#">PROJECTS</a></li>
       </ul>
     </nav>
-    <center>
-      <h2 class="head">Under construction.</h2>
-      <p class="aligncenter">
-        <img src="patrick.jpg" alt="centered image" /><br />
-      </p>
-    </center>
+    <section></section>
   </body>
 </html>
