--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Neha Ajith</title>
   </head>
   <body>
-    <nav>
-        <input type="checkbox" id="check">
+    <header>
+      <nav>
+        <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
-            <img class="menu" src="assets/menu.png">
+          <img class="menu" src="assets/menu.png" />
         </label>
-        
-      <label class="logo">NEHA AJITH</label>
-      <ul>
-        <li><a class="active" href="#">INTRO</a></li>
-        <li><a href="#">WHO</a></li>
-        <li><a href="#">WHAT</a></li>
-        <li><a href="#">PROJECTS</a></li>
-      </ul>
-    </nav>
+
+        <label class="logo">NEHA AJITH</label>
+        <ul>
+          <li><a class="active" href="#">INTRO</a></li>
+          <li><a href="#">WHO</a></li>
+          <li><a href="#">WHAT</a></li>
+          <li><a href="#">PROJECTS</a></li>
+        </ul>
+      </nav>
+    </header>
     <section></section>
   </body>
 </html>
