idk I don't trust smudge

--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
   </head>
   <body>
     <header>
-      <nav>
-        <input type="checkbox" id="check" />
-        <label for="check" class="checkbtn">
-          <img class="menu" src="assets/menu.png" />
-        </label>
-
-        <label class="logo">NEHA AJITH</label>
-        <ul>
-          <li><a class="active" href="#">INTRO</a></li>
-          <li><a href="#">WHO</a></li>
-          <li><a href="#">WHAT</a></li>
-          <li><a href="#">PROJECTS</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="flex items-center justify-between">
+          <div class="flex left items-center">
+            <div class="logo">
+              <h1>NEHA AJITH</h1>
+            </div>
+            <div>
+              <a href="#">INTRO</a>
+              <a href="#">WHO</a>
+              <a href="#">WHAT</a>
+              <a href="#">PROJECTS</a>
+            </div>
+          </div>
+          <div class="right">
+            <a href="#"><img src="assets/instagram.png" /></a>
+            <a href="#"><img src="assets/linkedin.png" /></a>
+            <a href="#"><img src="assets/github.png" /></a>
+          </div>
+        </nav>
+      </div>
     </header>
     <section></section>
   </body>
