--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap"
+      rel="stylesheet"
+    />
     <title>Neha Ajith</title>
   </head>
   <body>
@@ -30,6 +36,8 @@
         </nav>
       </div>
     </header>
-    <section></section>
+    <div class="hero flex items-center">
+      <h1>Bonjour! <br> Neha here :)</h1>
+    </div>
   </body>
 </html>
