idk I don't trust smudge

--- a/index.html
+++ b/index.html
@@ -39,5 +39,15 @@
     <div class="hero flex items-center">
       <h1>Bonjour! <br> Neha here :)</h1>
     </div>
+    <section class="who">
+      <div class="container">
+        <h1>hi</h1>
+        <h1>hi</h1>
+        <h1>hi</h1>
+        <h1>hi</h1>
+        <h1>hi</h1>
+        <h1>hi</h1>
+      </div>
+    </section>
   </body>
 </html>
