who and what completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap"
+      rel="stylesheet"
+    />
     <title>Neha Ajith</title>
   </head>
   <body>
@@ -37,16 +49,46 @@
       </div>
     </header>
     <div class="hero flex items-center">
-      <h1>Bonjour! <br> Neha here :)</h1>
+      <h1>
+        Bonjour! <br />
+        Neha here :)
+      </h1>
     </div>
     <section class="who">
-      <div class="container">
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
-        <h1>hi</h1>
+      <div class="container items-center">
+        <div class="top">
+          <p>
+            I'm a second year CSE student, studying at Rajiv Gandhi Insititute
+            of Technology, Kottayam.
+          </p>
+        </div>
+        <div class="bottom">
+          <h2 class="head">Education</h2>
+          <div class="ed">
+            <h4>Bachelor of Technology - CSE(present)</h4>
+            <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
+          </div>
+          <div class="ed">
+            <h4>Higher Secondary Education</h4>
+            <h2>Govt. HSS for Girls, Cottonhill, Thiruvananthapuram</h2>
+          </div>
+          <div class="ed">
+            <h4>High School</h4>
+            <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="what items-center justify-between">
+      <div class="desc">
+        <p>
+          I’m a student developer(thanks to Youtube, Google and StackOverflow
+          :P). I love making cool apps using Flutter and simple websites. I am
+          an occasional writer too.
+        </p>
+      </div>
+      <div class="btn">
+        <a href="#">My Resume</a>
       </div>
     </section>
   </body>
