--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container items-center">
         <div class="top">
           <p>
-            I'm a second year CSE student, studying at Rajiv Gandhi Insititute
+            I'm a second year CSE student, studying at Rajiv Gandhi Institute
             of Technology, Kottayam.
           </p>
         </div>
@@ -83,13 +83,16 @@
       <div class="desc">
         <p>
           I’m a student developer(thanks to Youtube, Google and StackOverflow
-          :P). I love making cool apps using Flutter and simple websites. I am
+          :P) and a professional overthinker. I love making cool apps using Flutter and simple websites. I am
           an occasional writer too.
         </p>
       </div>
       <div class="btn">
         <a href="#">My Resume</a>
       </div>
+    </section>
+    <section class="projects items-center justify-between">
+      <p>Coming soon...</p>
     </section>
   </body>
 </html>
