idk I don't trust smudge

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </div>
     </section>
     <section class="what items-center justify-between">
+      <div class="container">
       <div class="desc">
         <p>
           I’m a student developer(thanks to Youtube, Google and StackOverflow
@@ -90,6 +91,7 @@
       <div class="btn">
         <a href="#">My Resume</a>
       </div>
+    </div>
     </section>
     <section class="projects items-center justify-between">
       <p>Coming soon...</p>
