idk I don't trust smudge

--- a/index.html
+++ b/index.html
@@ -58,40 +58,56 @@
       <div class="container items-center">
         <div class="top">
           <p>
-            I'm a second year CSE student, studying at Rajiv Gandhi Institute
-            of Technology, Kottayam.
+            I'm a second year CSE student, studying at Rajiv Gandhi Institute of
+            Technology, Kottayam.
           </p>
         </div>
         <div class="bottom">
           <h2 class="head">Education</h2>
           <div class="ed">
-            <h4>Bachelor of Technology - CSE(present)</h4>
-            <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
+            <div class="no-hide">
+              <h4>Bachelor of Technology - CSE(present)</h4>
+              <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
+            </div>
+            <div class="hide">
+              <h4>2019 - 2023</h4>
+              <h4>CGPA: 8.4</h4>
+            </div>
           </div>
           <div class="ed">
-            <h4>Higher Secondary Education</h4>
-            <h2>Govt. HSS for Girls, Cottonhill, Thiruvananthapuram</h2>
+            <div class="no-hide">
+              <h4>Higher Secondary Education</h4>
+              <h2>Govt. HSS For Girls, Cottonhill, Thiruvananthapuram</h2>
+            </div>
+            <div class="hide">
+              <h4>2017 - 2019</h4>
+            </div>
           </div>
           <div class="ed">
-            <h4>High School</h4>
-            <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
+            <div class="no-hide">
+              <h4>High School</h4>
+              <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
+            </div>
+            <div class="hide">
+              <h4>2006 - 2017</h4>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <section class="what items-center justify-between">
       <div class="container">
-      <div class="desc">
-        <p>
-          I’m a student developer(thanks to Youtube, Google and StackOverflow
-          :P) and a professional overthinker. I love making cool apps using Flutter and simple websites. I am
-          an occasional writer too.
-        </p>
+        <div class="desc">
+          <p>
+            I’m a student developer(thanks to Youtube, Google and StackOverflow
+            :P) and a professional overthinker. I love making cool apps using
+            Flutter and simple websites. I am an occasional writer too.
+          </p>
+        </div>
+        <div class="btn">
+          <a href="#">My Resume</a>
+        </div>
       </div>
-      <div class="btn">
-        <a href="#">My Resume</a>
-      </div>
-    </div>
     </section>
     <section class="projects items-center justify-between">
       <p>Coming soon...</p>
