idk I don't trust smudge

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
             </div>
           </div>
           <div class="right">
-            <a href="#"><img src="assets/instagram.png" /></a>
-            <a href="#"><img src="assets/linkedin.png" /></a>
-            <a href="#"><img src="assets/github.png" /></a>
+            <a href="#">CONTACT</a>
           </div>
         </nav>
       </div>
@@ -112,5 +110,13 @@
     <section class="projects items-center justify-between">
       <p>Coming soon...</p>
     </section>
+    <section class="contact">
+      <h2>Drop a line! ^ _ ^</h2>
+    </section>
+    <!-- <footer>
+      <a href="#"><img src="assets/instagram.png" /></a>
+      <a href="#"><img src="assets/linkedin.png" /></a>
+      <a href="#"><img src="assets/github.png" /></a>
+    </footer> -->
   </body>
 </html>
