--- a/index.html
+++ b/index.html
@@ -1,140 +1,190 @@
 <!DOCTYPE html>
+<!-- commenting shit because I hate huge crowds :| -->
 <html lang="en">
   <head>
+    <!-- meta data -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- end of meta data -->
+
+    <!-- Font shit, just don't mind -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Public+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap"
       rel="stylesheet"
     />
+    <!-- End of font shit -->
+
+    <!-- js shit -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script language="JavaScript" type="text/javascript" src="./app.js"></script>
+    <!-- end of js shit -->
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Neha Ajith</title>
   </head>
+
   <body>
-    <header>
-      <div class="container">
-        <nav class="flex items-center justify-between">
-          <div class="flex left items-center">
-            <div class="logo">
-              <h1>NEHA AJITH</h1>
+    <div class="main-wrapper">
+      <button class="hamburger">
+        <img src="assets/menu.png" alt="">
+      </button>
+
+      <!-- mobile nav menu -->
+      <div class="mobile-nav">
+        <h1>NEHA AJITH</h1>
+        <button class="times"><img src="assets/times.png" alt=""></button>
+        <ul>
+          <li><a href="#">INTRO</a></li>
+          <li><a href="#">WHO</a></li>
+          <li><a href="#">WHAT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
+      <!-- end of mobile nav menu -->
+
+      <!-- nav bar -->
+      <header>
+        <div class="container">
+          <nav id="main-nav" class="flex items-center justify-between">
+            <div class="flex left items-center">
+              <div class="logo">
+                <h1>NEHA AJITH</h1>
+              </div>
+              <div>
+                <a href="#">INTRO</a>
+                <a href="#who">WHO</a>
+                <a href="#what">WHAT</a>
+                <!-- <a href="#projects">PROJECTS</a> -->
+              </div>
             </div>
-            <div>
-              <a href="#">INTRO</a>
-              <a href="#who">WHO</a>
-              <a href="#what">WHAT</a>
-              <!-- <a href="#projects">PROJECTS</a> -->
+            <div class="right">
+              <a href="#contact">CONTACT</a>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <!-- end of navbar -->
+
+      <!-- intro section -->
+      <section class="hero items-center">
+        <h1>
+          Bonjour! <br />
+          Neha here :)
+        </h1>
+      </section>
+      <!-- end of intro -->
+
+      <!-- who am i section(well idk) -->
+      <section id="who" class="who items-center flex">
+        <div class="top">
+          <p>
+            I'm a second year CSE student, studying at Rajiv Gandhi Institute of
+            Technology, Kottayam.
+          </p>
+        </div>
+        <div class="bottom">
+          <h2 class="head">Education</h2>
+          <div class="ed">
+            <div class="no-hide">
+              <h4>Bachelor of Technology - CSE(present)</h4>
+              <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
+            </div>
+            <div class="hide">
+              <h4>2019 - 2023</h4>
+              <h4>CGPA: 8.4</h4>
             </div>
           </div>
-          <div class="right">
-            <a href="#contact">CONTACT</a>
+          <div class="ed">
+            <div class="no-hide">
+              <h4>Higher Secondary Education</h4>
+              <h2>Govt. HSS For Girls, Cottonhill, Thiruvananthapuram</h2>
+            </div>
+            <div class="hide">
+              <h4>2017 - 2019</h4>
+            </div>
           </div>
-        </nav>
-      </div>
-    </header>
-    <section class="hero items-center">
-      <h1>
-        Bonjour! <br />
-        Neha here :)
-      </h1>
-    </section>
-    <section id="who" class="who items-center flex">
-      <div class="top">
-        <p>
-          I'm a second year CSE student, studying at Rajiv Gandhi Institute of
-          Technology, Kottayam.
-        </p>
-      </div>
-      <div class="bottom">
-        <h2 class="head">Education</h2>
-        <div class="ed">
-          <div class="no-hide">
-            <h4>Bachelor of Technology - CSE(present)</h4>
-            <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
-          </div>
-          <div class="hide">
-            <h4>2019 - 2023</h4>
-            <h4>CGPA: 8.4</h4>
+          <div class="ed">
+            <div class="no-hide">
+              <h4>High School</h4>
+              <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
+            </div>
+            <div class="hide">
+              <h4>2006 - 2017</h4>
+            </div>
           </div>
         </div>
-        <div class="ed">
-          <div class="no-hide">
-            <h4>Higher Secondary Education</h4>
-            <h2>Govt. HSS For Girls, Cottonhill, Thiruvananthapuram</h2>
-          </div>
-          <div class="hide">
-            <h4>2017 - 2019</h4>
-          </div>
+      </section>
+      <!-- end of who am i -->
+
+      <!-- what am I(wtf) -->
+      <section id="what" class="what flex">
+        <div class="desc">
+          <p>
+            I’m a student developer(thanks to Youtube, Google and StackOverflow
+            :P) and a professional overthinker. I love making cool apps using
+            Flutter and designing simple websites. I am an occasional writer
+            too.
+          </p>
         </div>
-        <div class="ed">
-          <div class="no-hide">
-            <h4>High School</h4>
-            <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
-          </div>
-          <div class="hide">
-            <h4>2006 - 2017</h4>
-          </div>
+        <div class="btn">
+          <a href="#">My Resume</a>
         </div>
-      </div>
-    </section>
-    <section id="what" class="what flex">
-      <div class="desc">
-        <p>
-          I’m a student developer(thanks to Youtube, Google and StackOverflow
-          :P) and a professional overthinker. I love making cool apps using
-          Flutter and designing simple websites. I am an occasional writer too.
-        </p>
-      </div>
-      <div class="btn">
-        <a href="#">My Resume</a>
-      </div>
-    </section>
-    <!-- <section id="projects" class="projects">
+      </section>
+      <!-- end of what am i -->
+
+      <!-- <section id="projects" class="projects">
         <h1>Coming soon...</h1>
     </section> -->
-    <section id="contact" class="contact flex items-center">
-      <h2>Drop a line! ^ _ ^</h2>
-      <form action="">
-        <div class="input-wrap">
-          <input type="text" size="40" placeholder="Your Name" />
-          <input type="email" placeholder="Your email" />
+
+      <!-- contact me section(please don't contact me and say i suck, i know) -->
+      <section id="contact" class="contact flex items-center">
+        <h2>Drop a line! ^ _ ^</h2>
+        <form action="">
+          <div class="input-wrap">
+            <input type="text" size="40" placeholder="Your Name" />
+            <input type="email" placeholder="Your email" />
+          </div>
+          <div class="text-area-wrap">
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Your message"
+            ></textarea>
+          </div>
+          <div class="button">
+            <button class="btn">Send Message</button>
+          </div>
+        </form>
+      </section>
+      <!-- end of contact me -->
+
+      <!-- footer -->
+      <footer>
+        <h3>Designed and developed by</h3>
+        <h2>Neha Ajith</h2>
+        <div class="socials">
+          <a href="#"><img src="assets/instagram.png" /></a>
+          <a href="#"><img src="assets/linkedin.png" /></a>
+          <a href="#"><img src="assets/github.png" /></a>
         </div>
-        <div class="text-area-wrap">
-          <textarea
-            name=""
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="Your message"
-          ></textarea>
-        </div>
-        <div class="button">
-          <button class="btn">Send Message</button>
-        </div>
-      </form>
-    </section>
-    <footer>
-      <h3>Designed and developed by</h3>
-      <h2>Neha Ajith</h2>
-      <div class="socials">
-        <a href="#"><img src="assets/instagram.png" /></a>
-        <a href="#"><img src="assets/linkedin.png" /></a>
-        <a href="#"><img src="assets/github.png" /></a>
-      </div>
-    </footer>
+      </footer>
+      <!-- end of footer -->
+
+      
+    </div>
   </body>
 </html>
+<!-- bye, I don't wanna see you again -->
