--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- End of font shit -->
 
     <!-- js shit -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script language="JavaScript" type="text/javascript" src="./app.js"></script>
     <!-- end of js shit -->
 
