--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
     <!-- End of font shit -->
 
     <!-- js shit -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script language="JavaScript" type="text/javascript" src="./app.js"></script>
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      language="JavaScript"
+      type="text/javascript"
+      src="./app.js"
+    ></script>
     <!-- end of js shit -->
 
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -37,13 +44,13 @@
   <body>
     <div class="main-wrapper">
       <button class="hamburger">
-        <img src="assets/menu.png" alt="">
+        <img src="assets/menu.png" alt="" />
       </button>
 
       <!-- mobile nav menu -->
       <div class="mobile-nav">
         <h1>NEHA AJITH</h1>
-        <button class="times"><img src="assets/times.png" alt=""></button>
+        <button class="times"><img src="assets/times.png" alt="" /></button>
         <ul>
           <li><a href="#">INTRO</a></li>
           <li><a href="#">WHO</a></li>
@@ -77,50 +84,52 @@
       <!-- end of navbar -->
 
       <!-- intro section -->
-      <section class="hero items-center">
+      <div class="hero container items-center">
         <h1>
           Bonjour! <br />
           Neha here :)
         </h1>
-      </section>
+      </div>
       <!-- end of intro -->
 
       <!-- who am i section(well idk) -->
-      <section id="who" class="who items-center flex">
-        <div class="top">
-          <p>
-            I'm a second year CSE student, studying at Rajiv Gandhi Institute of
-            Technology, Kottayam.
-          </p>
-        </div>
-        <div class="bottom">
-          <h2 class="head">Education</h2>
-          <div class="ed">
-            <div class="no-hide">
-              <h4>Bachelor of Technology - CSE(present)</h4>
-              <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
-            </div>
-            <div class="hide">
-              <h4>2019 - 2023</h4>
-              <h4>CGPA: 8.4</h4>
-            </div>
+      <section id="who" class="who">
+        <div class="container items-center flex">
+          <div class="top">
+            <p>
+              I'm a second year CSE student, studying at Rajiv Gandhi Institute
+              of Technology, Kottayam.
+            </p>
           </div>
-          <div class="ed">
-            <div class="no-hide">
-              <h4>Higher Secondary Education</h4>
-              <h2>Govt. HSS For Girls, Cottonhill, Thiruvananthapuram</h2>
+          <div class="bottom">
+            <h2 class="head">Education</h2>
+            <div class="ed">
+              <div class="no-hide">
+                <h4>Bachelor of Technology - CSE(present)</h4>
+                <h2>Rajiv Gandhi Institute of Technology, Kottayam</h2>
+              </div>
+              <div class="hide">
+                <h4>2019 - 2023</h4>
+                <h4>CGPA: 8.4</h4>
+              </div>
             </div>
-            <div class="hide">
-              <h4>2017 - 2019</h4>
+            <div class="ed">
+              <div class="no-hide">
+                <h4>Higher Secondary Education</h4>
+                <h2>Govt. HSS For Girls, Cottonhill, Thiruvananthapuram</h2>
+              </div>
+              <div class="hide">
+                <h4>2017 - 2019</h4>
+              </div>
             </div>
-          </div>
-          <div class="ed">
-            <div class="no-hide">
-              <h4>High School</h4>
-              <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
-            </div>
-            <div class="hide">
-              <h4>2006 - 2017</h4>
+            <div class="ed">
+              <div class="no-hide">
+                <h4>High School</h4>
+                <h2>Kairali Vidya Bhavan, Nedumangad, Thiruvananthapuram</h2>
+              </div>
+              <div class="hide">
+                <h4>2006 - 2017</h4>
+              </div>
             </div>
           </div>
         </div>
@@ -128,17 +137,19 @@
       <!-- end of who am i -->
 
       <!-- what am I(wtf) -->
-      <section id="what" class="what flex">
-        <div class="desc">
-          <p>
-            I’m a student developer(thanks to Youtube, Google and StackOverflow
-            :P) and a professional overthinker. I love making cool apps using
-            Flutter and designing simple websites. I am an occasional writer
-            too.
-          </p>
-        </div>
-        <div class="btn">
-          <a href="#">My Resume</a>
+      <section id="what" class="what">
+        <div class="container flex">
+          <div class="desc">
+            <p>
+              I’m a student developer(thanks to Youtube, Google and
+              StackOverflow :P) and a professional overthinker. I love making
+              cool apps using Flutter and designing simple websites. I am an
+              occasional writer too.
+            </p>
+          </div>
+          <div class="btn">
+            <a href="#">My Resume</a>
+          </div>
         </div>
       </section>
       <!-- end of what am i -->
@@ -148,26 +159,26 @@
     </section> -->
 
       <!-- contact me section(please don't contact me and say i suck, i know) -->
-      <section id="contact" class="contact flex items-center">
-        <h2>Drop a line! ^ _ ^</h2>
-        <form action="">
-          <div class="input-wrap">
-            <input type="text" size="40" placeholder="Your Name" />
-            <input type="email" placeholder="Your email" />
-          </div>
-          <div class="text-area-wrap">
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="10"
-              placeholder="Your message"
-            ></textarea>
-          </div>
-          <div class="button">
-            <button class="btn">Send Message</button>
-          </div>
-        </form>
+      <section id="contact" class="contact">
+        <div class="container flex items-center">
+          <h2>Drop a line! ^ _ ^</h2>
+          <form action="">
+            <div class="input-wrap flex">
+              <input type="text" placeholder="Your Name" />
+              <input type="email" placeholder="Your email" />
+            </div>
+            <div class="text-area-wrap flex">
+              <textarea
+                name=""
+                id=""
+                placeholder="Your message"
+              ></textarea>
+            </div>
+            <div class="button">
+              <button class="btn">Send Message</button>
+            </div>
+          </form>
+        </div>
       </section>
       <!-- end of contact me -->
 
@@ -182,8 +193,6 @@
         </div>
       </footer>
       <!-- end of footer -->
-
-      
     </div>
   </body>
 </html>
