--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
       <!-- end of navbar -->
 
       <!-- intro section -->
+      <section class="intro">
       <div class="hero container items-center">
         <h1>
           Bonjour! <br />
           Neha here :)
         </h1>
       </div>
+    </section>
       <!-- end of intro -->
 
       <!-- who am i section(well idk) -->
@@ -138,7 +140,7 @@
 
       <!-- what am I(wtf) -->
       <section id="what" class="what">
-        <div class="container flex">
+        <div class=" flex">
           <div class="desc">
             <p>
               I’m a student developer(thanks to Youtube, Google and
@@ -161,22 +163,20 @@
       <!-- contact me section(please don't contact me and say i suck, i know) -->
       <section id="contact" class="contact">
         <div class="container flex items-center">
-          <h2>Drop a line! ^ _ ^</h2>
+          <h2>Drop a line!</h2>
           <form action="">
-            <div class="input-wrap flex">
+            <div class="container form-wrapper">
+            <div class="input-wrap">
               <input type="text" placeholder="Your Name" />
               <input type="email" placeholder="Your email" />
             </div>
-            <div class="text-area-wrap flex">
-              <textarea
-                name=""
-                id=""
-                placeholder="Your message"
-              ></textarea>
+            <div class="text-area-wrap">
+              <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
             </div>
             <div class="button">
               <button class="btn">Send Message</button>
             </div>
+          </div>
           </form>
         </div>
       </section>
