--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
       <!-- intro section -->
       <section class="intro">
-      <div class="hero container items-center">
-        <h1>
-          Bonjour! <br />
-          Neha here :)
-        </h1>
-      </div>
-    </section>
+        <div class="hero container items-center">
+          <h1>
+            Bonjour! <br />
+            Neha here :)
+          </h1>
+        </div>
+      </section>
       <!-- end of intro -->
 
       <!-- who am i section(well idk) -->
@@ -140,17 +140,16 @@
 
       <!-- what am I(wtf) -->
       <section id="what" class="what">
-        <div class=" flex">
-          <div class="desc">
+        <div class="container items-center flex">
+          <div class="top">
             <p>
               I’m a student developer(thanks to Youtube, Google and
-              StackOverflow :P) and a professional overthinker. I love making
-              cool apps using Flutter and designing simple websites. I am an
-              occasional writer too.
+              StackOverflow :P). I love making cool apps using Flutter and
+              simple websites. I am an occasional writer too.
             </p>
           </div>
-          <div class="btn">
-            <a href="#">My Resume</a>
+          <div class="button">
+            <button class="btn">My Resume</button>
           </div>
         </div>
       </section>
@@ -166,17 +165,23 @@
           <h2>Drop a line!</h2>
           <form action="">
             <div class="container form-wrapper">
-            <div class="input-wrap">
-              <input type="text" placeholder="Your Name" />
-              <input type="email" placeholder="Your email" />
+              <div class="input-wrap">
+                <input type="text" placeholder="Your Name" />
+                <input type="email" placeholder="Your email" />
+              </div>
+              <div class="text-area-wrap">
+                <textarea
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="10"
+                  placeholder="Your message"
+                ></textarea>
+              </div>
+              <div class="button">
+                <button class="btn">Send Message</button>
+              </div>
             </div>
-            <div class="text-area-wrap">
-              <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
-            </div>
-            <div class="button">
-              <button class="btn">Send Message</button>
-            </div>
-          </div>
           </form>
         </div>
       </section>
