--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>  
     <script
       language="JavaScript"
       type="text/javascript"
@@ -53,9 +54,9 @@
         <button class="times"><img src="assets/times.png" alt="" /></button>
         <ul>
           <li><a href="#">INTRO</a></li>
-          <li><a href="#">WHO</a></li>
-          <li><a href="#">WHAT</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="#who">WHO</a></li>
+          <li><a href="#what">WHAT</a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
       <!-- end of mobile nav menu -->
@@ -149,7 +150,7 @@
             </p>
           </div>
           <div class="button">
-            <button class="btn">My Resume</button>
+            <button onClick="javascript:window.open('http://www.facebook.com', '_blank');" class="btn">My Resume</button>
           </div>
         </div>
       </section>
@@ -166,20 +167,20 @@
           <form action="">
             <div class="container form-wrapper">
               <div class="input-wrap">
-                <input type="text" placeholder="Your Name" />
-                <input type="email" placeholder="Your email" />
+                <input id="mail-sender-name" type="text" placeholder="Your Name" />
+                <input id="mail-sender-mail" type="email" placeholder="Your email" />
               </div>
               <div class="text-area-wrap">
                 <textarea
                   name=""
-                  id=""
+                  id="mail-sender-message"
                   cols="30"
                   rows="10"
                   placeholder="Your message"
                 ></textarea>
               </div>
               <div class="button">
-                <button class="btn">Send Message</button>
+                <button onclick="sendEmail()" class="btn">Send Message</button>
               </div>
             </div>
           </form>
