it's fucked up but ok imma publish this shit anyway

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- end of js shit -->
 
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="assets/cat.png" />
     <title>Neha Ajith</title>
   </head>
 
@@ -150,7 +151,7 @@
           </div>
           <div class="button">
             <button
-              onClick="javascript:window.open('http://www.facebook.com', '_blank');"
+              onClick="javascript:window.open('https://drive.google.com/file/d/1As9e-TjGe4yy7kbypzLITzl97yJbaRHu/view?usp=sharing', '_blank');"
               class="btn"
             >
               My Resume
@@ -169,30 +170,29 @@
         <div class="container flex items-center">
           <h2>Drop a line!</h2>
           <form action="https://api.web3forms.com/submit" method="POST">
-            <input type="hidden" name="apikey" value="e9ff28f7-f8c2-4f03-8f41-3f3f5bf8d096">
+            <input
+              type="hidden"
+              name="apikey"
+              value="e9ff28f7-f8c2-4f03-8f41-3f3f5bf8d096"
+            />
             <div class="container form-wrapper">
               <div class="input-wrap">
-                <input
-                  id="mail-sender-name"
-                  type="text"
-                  placeholder="Your Name"
-                />
-                <input
-                  id="mail-sender-mail"
-                  type="email"
-                  placeholder="Your email"
-                />
+                <input name="name" type="text" placeholder="Your Name" />
+                <input name="email" type="email" placeholder="Your email" />
               </div>
               <div class="text-area-wrap">
                 <textarea
-                  name=""
-                  id="mail-sender-message"
+                  name="message"
                   cols="30"
                   rows="10"
                   placeholder="Your message"
                 ></textarea>
               </div>
-              <input type="hidden" name="redirect" value="https://web3forms.com/success">
+              <input
+                type="hidden"
+                name="redirect"
+                value="https://web3forms.com/success"
+              />
               <div class="button">
                 <button type="submit" class="btn">Send Message</button>
               </div>
@@ -207,9 +207,9 @@
         <h3>Designed and developed by</h3>
         <h2>Neha Ajith</h2>
         <div class="socials">
-          <a href="#"><img src="assets/instagram.png" /></a>
-          <a href="#"><img src="assets/linkedin.png" /></a>
-          <a href="#"><img src="assets/github.png" /></a>
+          <a href="https://www.instagram.com/nehahahaaha_/" target="_blank"><img src="assets/instagram.png" /></a>
+          <a href="https://www.linkedin.com/in/neha-ajith/" target="_blank"><img src="assets/linkedin.png" /></a>
+          <a href="https://github.com/neha-ajith" target="_blank"><img src="assets/github.png" /></a>
         </div>
       </footer>
       <!-- end of footer -->
