--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container items-center flex">
           <div class="top">
             <p>
-              I'm a second year CSE student, studying at Rajiv Gandhi Institute
+              I'm a third year CSE student, studying at Rajiv Gandhi Institute
               of Technology, Kottayam.
             </p>
           </div>
